# olmo-bonepick

./: CLAUDE.md  README.md  WORKLOG.md  pyproject.toml
scripts/: README.md  all_fasttext.sh  annotate_stack_edu_redux.sh  compare_jsonl.py  plot_all.sh  sample_and_annotate_stack_edu_redux.sh  threshold_report.sh  threshold_report.txt  train_stack_edu_redux_classifier.sh
src/better_cls/: __init__.py  cli.py  data_loop.py  data_utils.py  distill_loop.py  eval_loop.py  model2vec_utils.py  normalizers.py  train_loop.py
src/bonepick/: __init__.py  cli.py  data_loop.py  data_utils.py  distill_loop.py  eval_loop.py  logger.py  model2vec_utils.py  train_loop.py
src/bonepick/annotate/: __init__.py  agreement_loop.py  analysis_loop.py  annotate_loop.py  annotate_utils.py  deluge_utils.py  prompts.py  pydantic_utils.py
src/bonepick/annotate/prompt_collections/: __init__.py  code_rubrics.py  sft_filtering.py  stack_edu_rubrics.py
src/bonepick/data/: commands.py  expressions.py  utils.py
src/bonepick/evals/: __init__.py  commands.py  utils.py
src/bonepick/fasttext/: commands.py
src/bonepick/model2vec/: commands.py
src/bonepick/train/: __init__.py  data_loop.py  data_utils.py  distill_loop.py  eval_loop.py  fasttext_utils.py  indent_utils.py  inference_loop.py  jq_utils.py  model2vec_utils.py  normalizers.py  tokenization_utils.py  train_loop.py
tests/: test_indent_utils.py  test_prepare_dataset_benchmark.py  test_sample_dataset.py
