[project]
name = "bonepick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.9.1",
    "click",
    "datasets<5",
    "model2vec[distill,train]>=0.7.0",
    "smart-open[s3]>=7.1.0",
    "msgspec",
    "backports-weakref>=1.0.post1",
    "backports-zstd>=1.2.0",
    "jq>=1.10.0",
    "tqdm>=4.66.5",
    "tokenizers>=0.22.1",
    "plsfix>=0.1.8",
    "tokenlearn>=0.2.1",
]

[project.scripts]
bonepick = "bonepick.__init__:cli"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/bonepick"]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
